--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # -----------------------------------------------------------------------------
 # PostgreSQL Credentials for Docker Compose
 # -----------------------------------------------------------------------------
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=Darshan70
-POSTGRES_DB=rust_app
+POSTGRES_USER=rust_jwt_zu2n_user
+POSTGRES_PASSWORD=2OtuFcoTXJTJ5LtKeNHvkvQ5y8b51aoF
+POSTGRES_DB=rust_jwt_zu2n
 
 # -----------------------------------------------------------------------------
 # pgAdmin4 Credentials for Docker Compose
@@ -16,8 +16,10 @@ PGADMIN_LISTEN_PORT=80
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL - Docker)
 # -----------------------------------------------------------------------------
-DATABASE_URL=postgresql://postgres:Darshan70@localhost:5432/rust_app?schema=public
-DATABASE_CONTAINER_URL=postgresql://postgres:Darshan70@localhost:5432/rust_app?schema=public
+# DATABASE_URL=postgresql://postgres:Darshan70@localhost:5432/rust_app?schema=public
+# DATABASE_CONTAINER_URL=postgresql://postgres:Darshan70@localhost:5432/rust_app?schema=public
+DATABASE_URL=postgres://rust_jwt_zu2n_user:2OtuFcoTXJTJ5LtKeNHvkvQ5y8b51aoF@dpg-ck819eo8elhc73d8g6d0-a.oregon-postgres.render.com/rust_jwt_zu2n?schema=public
+DATABASE_CONTAINER_URL=postgres://rust_jwt_zu2n_user:2OtuFcoTXJTJ5LtKeNHvkvQ5y8b51aoF@dpg-ck819eo8elhc73d8g6d0-a.oregon-postgres.render.com/rust_jwt_zu2n?schema=public
 # DATABASE_TEST_URI=postgresql://postgres:password123@localhost:5432/rust_app?schema=public
 
 # -----------------------------------------------------------------------------
