--- a/.env
+++ b/.env
@@ -18,8 +18,8 @@ PGADMIN_LISTEN_PORT=80
 # -----------------------------------------------------------------------------
 # DATABASE_URL=postgresql://postgres:Darshan70@localhost:5432/rust_app?schema=public
 # DATABASE_CONTAINER_URL=postgresql://postgres:Darshan70@localhost:5432/rust_app?schema=public
-DATABASE_URL=postgres://rust_backend_user:GQzfG5WhcvfevCT1L6dn0EdpY1dWwrC4@dpg-ckb39d7s0fgc73cg30s0-a/rust_backend?schema=public
-DATABASE_CONTAINER_URL=postgres://rust_backend_user:GQzfG5WhcvfevCT1L6dn0EdpY1dWwrC4@dpg-ckb39d7s0fgc73cg30s0-a/rust_backend?schema=public
+DATABASE_URL=postgres://rust_backend_user:GQzfG5WhcvfevCT1L6dn0EdpY1dWwrC4@dpg-ckb39d7s0fgc73cg30s0-a.oregon-postgres.render.com/rust_backend?schema=public
+DATABASE_CONTAINER_URL=postgres://rust_backend_user:GQzfG5WhcvfevCT1L6dn0EdpY1dWwrC4@dpg-ckb39d7s0fgc73cg30s0-a.oregon-postgres.render.com/rust_backend?schema=public
 # DATABASE_TEST_URI=postgresql://postgres:password123@localhost:5432/rust_app?schema=public
 
 # -----------------------------------------------------------------------------
